Implement TransIp API authentication

--- a/src/DnsSync.ConsoleApp/appsettings.json
+++ b/src/DnsSync.ConsoleApp/appsettings.json
@@ -7,9 +7,10 @@
         }
     },
     "TransIpApi": {
-        "Key": "Test"
+        "Username": "x",
+        "PrivateKey": "x"
     },
     "GoogleApi": {
-        "Key": "Test2"
+        "Key": "x"
     }
 }
