--- a/src/DnsSync.ConsoleApp/DnsSync.ConsoleApp.csproj
+++ b/src/DnsSync.ConsoleApp/DnsSync.ConsoleApp.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Apis.Dns.v1" Version="1.51.0.2269" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
