Split TransIp API client and token management

--- a/src/DnsSync.ConsoleApp/appsettings.json
+++ b/src/DnsSync.ConsoleApp/appsettings.json
@@ -11,6 +11,8 @@
         "PrivateKey": "x"
     },
     "GoogleApi": {
-        "Key": "x"
+        "ProjectId": "x",
+        "ClientId": "x",
+        "PrivateKey": "x"
     }
 }
