Add Azure DNS sync stub

--- a/src/DnsSync.ConsoleApp/appsettings.json
+++ b/src/DnsSync.ConsoleApp/appsettings.json
@@ -10,6 +10,11 @@
         "Username": "x",
         "PrivateKey": "x"
     },
+    "AzureApi": {
+        "TenantId": "x",
+        "ClientId": "x",
+        "Secret": "x"
+    },
     "GoogleApi": {
         "ProjectId": "x",
         "ClientId": "x",
