--- a/src/DnsSync.ConsoleApp/DnsSync.ConsoleApp.csproj
+++ b/src/DnsSync.ConsoleApp/DnsSync.ConsoleApp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Apis.Dns.v1" Version="1.51.0.2269" />
+    <PackageReference Include="Microsoft.Azure.Management.Dns.Fluent" Version="1.37.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
